@@ -1,3 +1,8 @@
+2013-02-01  Gregory Soyez  <soyez@fastjet.fr>
+
+	* scripts/internal/package.sh: (well... mostly Matteo)
+	added a simple script to package a tarball
+
 2013-01-31  Gregory Soyez  <soyez@fastjet.fr>
 
 	* scripts/internal/release-fjcontrib.sh:
